[gd_scene load_steps=2 format=3 uid="uid://df5qjsqm66rsd"]

[ext_resource type="Script" path="res://board_select.gd" id="1_enlqm"]

[node name="BoardSelect" type="CanvasLayer"]
script = ExtResource("1_enlqm")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.402604, 0.402604, 0.402604, 1)

[node name="ButtonNext" type="Button" parent="."]
offset_left = 856.0
offset_top = 536.0
offset_right = 986.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 48
text = "Done"

[node name="ButtonBack" type="Button" parent="."]
offset_left = 856.0
offset_top = 536.0
offset_right = 986.0
offset_bottom = 611.0
theme_override_font_sizes/font_size = 48
text = "Done"

[node name="Label" type="Label" parent="."]
offset_left = 78.0
offset_top = 548.0
offset_right = 691.0
offset_bottom = 598.0
theme_override_font_sizes/font_size = 36
text = "Click what board you want to affect
"

[node name="Board1_button" type="Button" parent="."]
offset_left = 141.0
offset_top = 125.0
offset_right = 374.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 60
text = "Board 1"

[node name="Board2_button" type="Button" parent="."]
offset_left = 141.0
offset_top = 351.0
offset_right = 374.0
offset_bottom = 442.0
theme_override_font_sizes/font_size = 60
text = "Board 2"

[node name="Board3_button" type="Button" parent="."]
offset_left = 746.0
offset_top = 125.0
offset_right = 979.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 60
text = "Board 3"

[node name="Board4_button" type="Button" parent="."]
offset_left = 746.0
offset_top = 351.0
offset_right = 979.0
offset_bottom = 442.0
theme_override_font_sizes/font_size = 60
text = "Board 4"

[connection signal="pressed" from="ButtonNext" to="." method="_on_button_next_pressed"]
[connection signal="pressed" from="ButtonBack" to="." method="_on_button_back_pressed"]
[connection signal="pressed" from="Board1_button" to="." method="_on_board_1_button_pressed"]
[connection signal="pressed" from="Board2_button" to="." method="_on_board_2_button_pressed"]
[connection signal="pressed" from="Board3_button" to="." method="_on_board_3_button_pressed"]
[connection signal="pressed" from="Board4_button" to="." method="_on_board_4_button_pressed"]
